<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/list_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_margin="10dp"
        android:backgroundTint="#ffffff"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="cursive"
                android:text="@string/tanggal"
                android:textColor="#3DB1BF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_tinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="monospace"
                android:paddingBottom="4dp"
                android:text="@string/tinggi"
                android:textColor="#2C738A"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_berat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="monospace"
                android:paddingBottom="4dp"
                android:text="@string/berat"
                android:textColor="#2C738A"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_JenisKelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="monospace"
                android:paddingBottom="4dp"
                android:text="@string/jenis_kelamin"
                android:textColor="#2C738A"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:foregroundGravity="center"
                android:gravity="clip_horizontal|center|clip_vertical|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im_BMIList"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/ideal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_hasilBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="monospace"
                    android:paddingBottom="4dp"
                    android:text="@string/hasil_bmi"
                    android:textColor="#2C738A"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_hasilberatIdealList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="monospace"
                    android:paddingBottom="4dp"
                    android:text="@string/hasil_bmi"
                    android:textColor="#2C738A"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@android:color/black" />

        </LinearLayout>
        <View style="@style/Divider"/>
    </LinearLayout>
</layout>
